--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -8,38 +8,42 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/ant_theme"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:paddingTop="@dimen/padding_top"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_scrollFlags="scroll|snap|enterAlways"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+
+        >
 
     </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/title_tv"
         android:layout_width="wrap_content"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:text=""
+        android:paddingTop="@dimen/padding_top"
         android:textColor="@color/white"
         android:textSize="18sp"/>
 
-<!--    <TextView
-        android:id="@+id/title_right_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/ripple_item_orange_bg"
-        android:gravity="center"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:clickable="true"
-        android:text="保存"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:visibility="gone"/>-->
+    <!--    <TextView
+            android:id="@+id/title_right_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/ripple_item_orange_bg"
+            android:gravity="center"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:clickable="true"
+            android:text="保存"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:visibility="gone"/>-->
 
 
 </RelativeLayout>
